--- a/assets/locales/bn.json
+++ b/assets/locales/bn.json
@@ -628,5 +628,15 @@
   "@skip": {
     "type": "text",
     "placeholders": {}
+  },
+  "reset": "রিসেট করুন",
+  "@reset": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "fastingReminder": "রোজার তাগাদা",
+  "@fastingReminder": {
+    "type": "text",
+    "placeholders": {}
   }
 }
