--- a/assets/locales/es.json
+++ b/assets/locales/es.json
@@ -628,5 +628,15 @@
   "@skip": {
     "type": "text",
     "placeholders": {}
+  },
+  "reset": "Restablecer",
+  "@reset": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "fastingReminder": "Recordatorio de Ayuno",
+  "@fastingReminder": {
+    "type": "text",
+    "placeholders": {}
   }
 }
