--- a/assets/locales/ur.json
+++ b/assets/locales/ur.json
@@ -628,5 +628,15 @@
   "@skip": {
     "type": "text",
     "placeholders": {}
+  },
+  "reset": "دوبارہ سیٹ کریں",
+  "@reset": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "fastingReminder": "روزے کی یاد دہانی",
+  "@fastingReminder": {
+    "type": "text",
+    "placeholders": {}
   }
 }
