ADD: Prayer of sites section

--- a/assets/locales/ar.json
+++ b/assets/locales/ar.json
@@ -17,6 +17,24 @@
     "type": "text",
     "placeholders": {}
   },
+  "cites": "المدن",
+  "@cites": {
+    "description": "Bottom nav: cities tab",
+    "type": "text",
+    "placeholders": {}
+  },
+  "citiesPrayerTimesTitle": "صلوات المدن",
+  "@citiesPrayerTimesTitle": {
+    "description": "Cities prayer times screen title",
+    "type": "text",
+    "placeholders": {}
+  },
+  "citiesPrayerTimesSearchHint": "ابحث عن المدينة لمعرفة مواقيت صلاتها",
+  "@citiesPrayerTimesSearchHint": {
+    "description": "Cities search hint",
+    "type": "text",
+    "placeholders": {}
+  },
   "Fajr": "الفجر",
   "@Fajr": {
     "type": "text",
