--- a/assets/locales/bn.json
+++ b/assets/locales/bn.json
@@ -17,6 +17,24 @@
     "type": "text",
     "placeholders": {}
   },
+  "cites": "শহরসমূহ",
+  "@cites": {
+    "description": "Bottom nav: cities tab",
+    "type": "text",
+    "placeholders": {}
+  },
+  "citiesPrayerTimesTitle": "শহরের নামাজের সময়",
+  "@citiesPrayerTimesTitle": {
+    "description": "Cities prayer times screen title",
+    "type": "text",
+    "placeholders": {}
+  },
+  "citiesPrayerTimesSearchHint": "নামাজের সময় দেখতে শহর খুঁজুন",
+  "@citiesPrayerTimesSearchHint": {
+    "description": "Cities search hint",
+    "type": "text",
+    "placeholders": {}
+  },
   "Fajr": "ফজর",
   "@Fajr": {
     "type": "text",
